@@ -58,6 +58,11 @@ admin-log = true
 # Whether to update a networks name based on the NETWORK= line sent when 
 # connected to it
 #learn-network-name = true
+#
+# Automatically set AWAY after a certain period of time
+#auto-away-message = I'm currently away, sorry!
+#auto-away-time = 300 # in seconds
+#auto-away-nick = jelmer|away
 
 # Irssi-style logging
 [log-irssi]
@@ -66,9 +71,3 @@ admin-log = true
 # Work as a socks proxy
 #[socks]
 #allow = jelmer:secret, foo:bar
-
-# Automatically set AWAY after a certain period of time
-#[auto-away]
-#message = I'm currently away, sorry!
-#time = 300 # in seconds
-#nick = jelmer|away
